fix: Crypto icons don't flicker anymore because of loading by adding a height/width

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -47,3 +47,8 @@
 .Background-gradient {
   background-image: linear-gradient(to right, $purple-color, $cyan-color);
 }
+
+.CryptoIcon-container {
+  height: 2rem;
+  width: 2rem;
+}
